src/rust/dcmfx_cli/tests/snapshots/dcm_to_json__with_multiple_inputs_1.snap
---
source: dcmfx_cli/tests/dcm_to_json.rs
expression: "std::fs::read_to_string(&output_files[1]).unwrap()"
snapshot_kind: text
---
{
  "00020010": {
    "vr": "UI",
    "Value": [
      "1.2.840.10008.1.2.4.50"
    ]
  },
  "00080008": {
    "vr": "CS",
    "Value": [
      "DERIVED",
      "SECONDARY",
      "OTHER"
    ]
  },
  "00080016": {
    "vr": "UI",
    "Value": [
      "1.2.840.10008.5.1.4.1.1.7"
    ]
  },
  "00080018": {
    "vr": "UI",
    "Value": [
      "1.2.276.0.7230010.3.1.4.8323329.1100.1521494053.974393"
    ]
  },
  "00080020": {
    "vr": "DA",
    "Value": [
      "20170101"
    ]
  },
  "00080023": {
    "vr": "DA"
  },
  "0008002A": {
    "vr": "DT"
  },
  "00080030": {
    "vr": "TM",
    "Value": [
      "120000"
    ]
  },
  "00080033": {
    "vr": "TM"
  },
  "00080050": {
    "vr": "SH"
  },
  "00080060": {
    "vr": "CS",
    "Value": [
      "OT"
    ]
  },
  "00080064": {
    "vr": "CS",
    "Value": [
      "SYN"
    ]
  },
  "00080090": {
    "vr": "PN",
    "Value": [
      {
        "Alphabetic": "Moriarty^James"
      }
    ]
  },
  "00082111": {
    "vr": "ST",
    "Value": [
      "Lossy compression with JPEG baseline, IJG quality factor 90, compression ratio 0.084906 [Scaled image]"
    ]
  },
  "00082112": {
  "vr": "SQ",
    "Value": [
      {
        "00081150": {
          "vr": "UI",
          "Value": [
            "1.2.840.10008.5.1.4.1.1.7"
          ]
        },
        "00081155": {
          "vr": "UI",
          "Value": [
            "1.2.276.0.7230010.3.1.4.8323329.1099.1521494048.423534"
          ]
        },
        "0040A170": {
        "vr": "SQ",
          "Value": [
            {
              "00080100": {
                "vr": "SH",
                "Value": [
                  "121320"
                ]
              },
              "00080102": {
                "vr": "SH",
                "Value": [
                  "DCM"
                ]
              },
              "00080104": {
                "vr": "LO",
                "Value": [
                  "Uncompressed predecessor"
                ]
              }
            }
          ]
        }
      }
    ]
  },
  "00089215": {
  "vr": "SQ",
    "Value": [
      {
        "00080100": {
          "vr": "SH",
          "Value": [
            "113040"
          ]
        },
        "00080102": {
          "vr": "SH",
          "Value": [
            "DCM"
          ]
        },
        "00080104": {
          "vr": "LO",
          "Value": [
            "Lossy Compression"
          ]
        }
      }
    ]
  },
  "00100010": {
    "vr": "PN",
    "Value": [
      {
        "Alphabetic": "Lestrade^G"
      }
    ]
  },
  "00100020": {
    "vr": "LO",
    "Value": [
      "ID1"
    ]
  },
  "00100030": {
    "vr": "DA"
  },
  "00100040": {
    "vr": "CS",
    "Value": [
      "F"
    ]
  },
  "00101010": {
    "vr": "AS",
    "Value": [
      "024Y"
    ]
  },
  "00185100": {
    "vr": "CS"
  },
  "0020000D": {
    "vr": "UI",
    "Value": [
      "1.2.826.0.1.3680043.8.498.12406831542731051035295345080039845114"
    ]
  },
  "0020000E": {
    "vr": "UI",
    "Value": [
      "1.2.826.0.1.3680043.8.498.16157229083793556332623330502397121062"
    ]
  },
  "00200010": {
    "vr": "SH",
    "Value": [
      "1"
    ]
  },
  "00200011": {
    "vr": "IS",
    "Value": [
      1
    ]
  },
  "00200013": {
    "vr": "IS",
    "Value": [
      1
    ]
  },
  "00200020": {
    "vr": "CS"
  },
  "00200060": {
    "vr": "CS"
  },
  "00204000": {
    "vr": "LT",
    "Value": [
      "Test Image with 10 rows of (255,0,0), 10 rows of (255,128,128), 10 rows of (0,255,0), 10 rows of (128,255,128), 10 rows of (0,0,255), 10 rows of (128,128,255), 10 rows of (0,0,0), 10 rows of (64,64,64), 10 rows of (192,192,192), 10 rows of (255,255,255), uncompressed"
    ]
  },
  "00280002": {
    "vr": "US",
    "Value": [
      3
    ]
  },
  "00280004": {
    "vr": "CS",
    "Value": [
      "YBR_FULL"
    ]
  },
  "00280006": {
    "vr": "US",
    "Value": [
      0
    ]
  },
  "00280008": {
    "vr": "IS",
    "Value": [
      1
    ]
  },
  "00280010": {
    "vr": "US",
    "Value": [
      3
    ]
  },
  "00280011": {
    "vr": "US",
    "Value": [
      3
    ]
  },
  "00280030": {
    "vr": "DS",
    "Value": [
      33.333333,
      33.333333
    ]
  },
  "00280100": {
    "vr": "US",
    "Value": [
      8
    ]
  },
  "00280101": {
    "vr": "US",
    "Value": [
      8
    ]
  },
  "00280102": {
    "vr": "US",
    "Value": [
      7
    ]
  },
  "00280103": {
    "vr": "US",
    "Value": [
      0
    ]
  },
  "00282110": {
    "vr": "CS",
    "Value": [
      "01"
    ]
  },
  "00282112": {
    "vr": "DS",
    "Value": [
      0.084906
    ]
  },
  "00282114": {
    "vr": "CS",
    "Value": [
      "ISO_10918_1"
    ]
  },
  "7FE00010": {
    "vr": "OB",
    "InlineBinary": "/v8A4AQAAAAAAAAA/v8A4D4BAAD/2P/gABBKRklGAAEBAAABAAEAAP/bAEMAAwICAwICAwMDAwQDAwQFCAUFBAQFCgcHBggMCgwMCwoLCw0OEhANDhEOCwsQFhARExQVFRUMDxcYFhQYEhQVFP/bAEMBAwQEBQQFCQUFCRQNCw0UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFP/AABEIAAMAAwMBEQACEQEDEQH/xAAUAAEAAAAAAAAAAAAAAAAAAAAG/8QAGhAAAQUBAAAAAAAAAAAAAAAABAAFFlKV0v/EABQBAQAAAAAAAAAAAAAAAAAAAAD/xAAfEQAAAwkAAAAAAAAAAAAAAAAAAgMEERJSVJKT0dL/2gAMAwEAAhEDEQA/AGcJaqmaBHaQM9OliS4B55zXG2P/2QA="
  }
}
